--- a/4. Parameter Optimization.ipynb
+++ b/4. Parameter Optimization.ipynb
@@ -164,14 +164,14 @@
    "source": [
     "By comparing the dimensions of the above two code sections, we see that 11 liquid density points have been removed by setting the reduced temperature interval.\n",
     "\n",
-    "We will now see how data can be retrieved from the class by using the <i>Retrieve_data</i> class function"
+    "We will now see how data can be retrieved from the class by using the <i>Retrieve_data</i> class function used to perform model predictions."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -217,11 +217,10 @@
     "P_model = np.zeros(n) #Memory allocation\n",
     "rho_model = np.zeros(n) #Memory allocation\n",
     "\n",
-    "#-----------------------------------------------------------------------------------\n",
+    "#Setting up thermodynamic calculations\n",
     "Tc = 769.5\n",
     "Pc = 33.2\n",
     "Om = 0.05 \n",
-    "\n",
     "b0 = 138.93\n",
     "Gamma = 3622.5\n",
     "c1 = 0.9100\n",
@@ -235,16 +234,18 @@
     "Thermo.CPAParams(1,b0,Gamma,c1)\n",
     "Thermo.AssocParams(1,AssocSch,AssocVol,AssocEng)\n",
     "\n",
+    "\n",
+    "#Running calculations\n",
     "Thermo.Setup_Thermo()\n",
     "\n",
     "for i in range(0,n):\n",
     "    P_model[i], b, c = Thermo.PBubble(T_model_psat[i],[1.0])\n",
     "    rho_model[i] = Thermo.LiqRho(T_model_rho[i],[1.0])\n",
+    "    \n",
     "Thermo.Finishup_Thermo()\n",
     "\n",
     "\n",
-    "\n",
-    "\n",
+    "#Plotting is made below\n",
     "plt.plot(T_model_psat,P_model,color=\"black\")\n",
     "plt.plot(expT_psat,expP,'o',color=\"blue\",markersize=  6)\n",
     "plt.xlabel(\"Temperature [K]\")\n",
@@ -265,28 +266,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can see from the above models that the model does not predict the data very well. In order to improve the model, it is necessary to optimize the parameters used. In the code block below a new object called CPA_Optimizer will be used."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Before:\n",
-      "\n",
-      "After:\n",
-      "128.545\n",
-      "3485.747\n",
-      "1.191\n",
-      "17.543\n",
-      "1414.024\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "#First, the thermodynamic calculations must be set up as per usua\n",
     "Thermo = xt.xThermoInterface()\n",
-    "optimizer = xt.CPA_Optimizer()\n",
     "\n",
     "Tc = 769.5\n",
     "Pc = 33.2\n",
@@ -300,18 +293,22 @@
     "AssocVol = 20.0\n",
     "AssocSch = 24\n",
     "\n",
-    "\n",
-    "\n",
     "Thermo.NoPureComp(1)\n",
     "Thermo.CritProps(1,Tc,Pc,Om)\n",
     "Thermo.CPAParams(1,b0,Gamma,c1)\n",
     "Thermo.AssocParams(1,AssocSch,AssocVol,AssocEng)\n",
     "\n",
+    "#From here we create a CPA_optimizer object\n",
+    "optimizer = xt.CPA_Optimizer()\n",
+    "\n",
+    "#The optimizer is now given a model to use, the xThermoInterface object\n",
     "optimizer.AddThermo(Thermo)\n",
+    "\n",
+    "#Now we add the experimental data object to the CPA_Optimizer object\n",
     "optimizer.AddExp(exp_data)\n",
     "\n",
-    "\n",
-    "\n",
+    "#Now the optimizer have enough information to perform parameterization. Keep in mind that CPA_Optimizer is solely for\n",
+    "#CPA model, a\n",
     "b0_new, Gamma_new, c1_new, AssocVol_new, AssocEng_new = optimizer.Calculation()"
    ]
   },
@@ -389,51 +386,63 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We now see the results for performing parameter optimization."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***THIS SECTION IS UNDER CONSTRUCTION***"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'Thermo_Uncertainty' is not defined",
+     "ename": "AttributeError",
+     "evalue": "'CPA_UncertaintyAnalysis' object has no attribute 'Sensitivity_Analysis'",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
       "\u001b[1;32m<ipython-input-8-780e9b8b63fd>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     24\u001b[0m \u001b[0mUncertainty\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mAddExp\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mexp_data\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     25\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 26\u001b[1;33m \u001b[0mmatrix\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mUncertainty\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mSensitivity_Analysis\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     27\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmatrix\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\OneDrive - Danmarks Tekniske Universitet\\CERE_PYTHON_PROJECT\\xThermoInterface.py\u001b[0m in \u001b[0;36mSensitivity_Analysis\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m   1290\u001b[0m       \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mn_points\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1291\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1292\u001b[1;33m          \u001b[0mdeviation_psat\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mPBubble_comparison\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mThermo_Uncertainty\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mexpT_psat\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mexpPsat\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcomposition\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdeviationType\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1293\u001b[0m          \u001b[0mdeviation_rho\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mLiqRho_comparison\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mThermo_Uncertainty\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mexpT_rho\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtolist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mexpRho\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtolist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcomposition\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdeviationType\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1294\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'Thermo_Uncertainty' is not defined"
+      "\u001b[1;31mAttributeError\u001b[0m: 'CPA_UncertaintyAnalysis' object has no attribute 'Sensitivity_Analysis'"
      ]
     }
    ],
    "source": [
-    "Thermo = xt.xThermoInterface()\n",
-    "Uncertainty = xt.CPA_UncertaintyAnalysis()\n",
+    "#Thermo = xt.xThermoInterface()\n",
+    "#Uncertainty = xt.CPA_UncertaintyAnalysis()\n",
     "\n",
-    "Tc = 769.5\n",
-    "Pc = 33.2\n",
-    "Om = 0.05 #whatever\n",
+    "#Tc = 769.5\n",
+    "#Pc = 33.2\n",
+    "#Om = 0.05 #whatever\n",
     "\n",
-    "b0 = 128.93\n",
-    "Gamma = 3622.5\n",
-    "c1 = 0.9100\n",
+    "#b0 = 128.93\n",
+    "#Gamma = 3622.5\n",
+    "#c1 = 0.9100\n",
     "\n",
-    "AssocEng =  1420.0\n",
-    "AssocVol = 20.0\n",
-    "AssocSch = 24\n",
+    "#AssocEng =  1420.0\n",
+    "#AssocVol = 20.0\n",
+    "#AssocSch = 24\n",
     "\n",
     "\n",
+    "#Thermo.NoPureComp(1)\n",
+    "#Thermo.CritProps(1,Tc,Pc,Om)\n",
+    "#Thermo.CPAParams(1,b0,Gamma,c1)\n",
+    "#Thermo.AssocParams(1,AssocSch,AssocVol,AssocEng)\n",
     "\n",
-    "Thermo.NoPureComp(1)\n",
-    "Thermo.CritProps(1,Tc,Pc,Om)\n",
-    "Thermo.CPAParams(1,b0,Gamma,c1)\n",
-    "Thermo.AssocParams(1,AssocSch,AssocVol,AssocEng)\n",
+    "#Uncertainty.AddThermo(Thermo)\n",
+    "#Uncertainty.AddExp(exp_data)\n",
     "\n",
-    "Uncertainty.AddThermo(Thermo)\n",
-    "Uncertainty.AddExp(exp_data)\n",
-    "\n",
-    "matrix = Uncertainty.Sensitivity_Analysis()\n",
-    "print(matrix)"
+    "#matrix = Uncertainty.Sensitivity_Analysis()\n",
+    "#print(matrix)"
    ]
   }
  ],
