Massive changes to documentation, minor changes to jupyter notebook files

--- a/1. Preparing Thermodynamic Calculations.ipynb
+++ b/1. Preparing Thermodynamic Calculations.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -146,14 +146,23 @@
       "Help on method ChooseAModel in module xThermoInterface:\n",
       "\n",
       "ChooseAModel(ieos) method of xThermoInterface.xThermoInterface instance\n",
-      "    1 - CPA\n",
-      "    2 - SRK\n",
-      "    3 - PR\n",
-      "    4 - PC-SAFT  (400, org UC + simplified 2), 401 (org UC + simplified 1), 402 (org UC + org HC)\n",
-      "                  410 (new UC + simplified 2), 411 (new UC + simplified 1), 412 (new UC + org HC)\n",
-      "    6 - ePC-SAFT (600, org UC + simplified 2), 601 (org UC + simplified 1), 602 (org UC + org HC)\n",
-      "                  610 (new UC + simplified 2), 611 (new UC + simplified 1), 612 (new UC + org HC)\n",
-      "    11 - eCPA\n",
+      "    This function allows the user to pick a model to use\n",
+      "    \n",
+      "    :param ieos: integer\n",
+      "    \n",
+      "      1 - CPA\n",
+      "    \n",
+      "      2 - SRK\n",
+      "    \n",
+      "      3 - PR\n",
+      "    \n",
+      "      4 - PC-SAFT  (400, org UC + simplified 2), 401 (org UC + simplified 1), 402 (org UC + org HC)\n",
+      "                410 (new UC + simplified 2), 411 (new UC + simplified 1), 412 (new UC + org HC)\n",
+      "    \n",
+      "      6 - ePC-SAFT (600, org UC + simplified 2), 601 (org UC + simplified 1), 602 (org UC + org HC)\n",
+      "                610 (new UC + simplified 2), 611 (new UC + simplified 1), 612 (new UC + org HC)\n",
+      "    \n",
+      "      11 - eCPA\n",
       "\n"
      ]
     }
@@ -180,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +317,7 @@
     "#In this example a pure compound system is set up, and CPA parameters\n",
     "#are set for methane (as an example).\n",
     "Thermo.NoPureComp(1) # System contains one compound\n",
-    "Case.CPAParams(1, 29.10, 959.03, 0.4472) # CPA parameters for Methane\n",
+    "Thermo.CPAParams(1, 29.10, 959.03, 0.4472) # CPA parameters for Methane\n",
     "#----------------------------------------------------------------------------\n",
     "\n",
     "#----------------------------------------------------------------------------\n",
@@ -316,8 +325,8 @@
     "#Note that methane and MEG will have the idx's 1 and 2 respectively \n",
     "#throughout thermodynamic calculations.\n",
     "Thermo.NoPureComp(2) # System contains two compounds\n",
-    "Case.CPAParams(1, 29.10, 959.03, 0.4472) # CPA parameters for Methane\n",
-    "Case.CPAParams(2, 51.4, 2531.7, 0.6744) # CPA parameters for MEG 4C\n",
+    "Thermo.CPAParams(1, 29.10, 959.03, 0.4472) # CPA parameters for Methane\n",
+    "Thermo.CPAParams(2, 51.4, 2531.7, 0.6744) # CPA parameters for MEG 4C\n",
     "#----------------------------------------------------------------------------\n"
    ]
   },
@@ -345,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +365,7 @@
     "#In this example a pure compound system is set up, and association parameters\n",
     "#are set for methane (as an example).\n",
     "Thermo.NoPureComp(1) # System contains one compound\n",
-    "Case.AssocParams(1, 22, 14.1, 2375.8) # Association parameters for MEG 4C\n",
+    "Thermo.AssocParams(1, 22, 14.1, 2375.8) # Association parameters for MEG 4C\n",
     "#----------------------------------------------------------------------------"
    ]
   },
@@ -385,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,24 +506,24 @@
     "Thermo.NoPureComp(2)\n",
     "\n",
     "#Here we write the critical properties for both compounds\n",
-    "Case.CritProps(1, 719.6, 82.0, 0.5211) #MEG 4C\n",
-    "Case.CritProps(2, 190.6, 45.9, 0.01155) #Methane\n",
+    "Thermo.CritProps(1, 719.6, 82.0, 0.5211) #MEG 4C\n",
+    "Thermo.CritProps(2, 190.6, 45.9, 0.01155) #Methane\n",
     "\n",
     "#Here we write the CPA parameters for both compounds\n",
-    "Case.CPAParams(1, 51.4, 2531.7, 0.6744) #MEG 4C\n",
-    "Case.CPAParams(2, 29.10, 959.03, 0.4472) #Methane\n",
+    "Thermo.CPAParams(1, 51.4, 2531.7, 0.6744) #MEG 4C\n",
+    "Thermo.CPAParams(2, 29.10, 959.03, 0.4472) #Methane\n",
     "\n",
     "#Here we write the association parameters MEG. Note that methane is a non-associating compound, \n",
     "#and thus does not need association parameters.\n",
-    "Case.AssocParams(1, 22, 14.1, 2375.8) #MEG 4C\n",
+    "Thermo.AssocParams(1, 22, 14.1, 2375.8) #MEG 4C\n",
     "\n",
     "#A corrective parameter need to be used to adjust for the binary behavior, \n",
     "#this parameter is the binary interaction parameter (kij). We only need one kij\n",
-    "Case.NoSpecKij(1) #Number of specified kij's (in this case 1)\n",
+    "Thermo.NoSpecKij(1) #Number of specified kij's (in this case 1)\n",
     "\n",
     "#Now we specify the kij below. Since it is the first kij, and is accounting for interaction between \n",
     "#component 1 and 2, we denote idx = 1, i = 1 and j = 2\n",
-    "Case.SpecKij(1,1,2,0.1787,0,0) #Kij\n",
+    "Thermo.SpecKij(1,1,2,0.1787,0,0) #Kij\n",
     "\n",
     "#Voila! We are ready to perform thermodynamic calculations with the binary MEG(4C)-Methane system."
    ]
