Small improvements to jupyter notebooks

--- a/5. Sensitivity Analysis.ipynb
+++ b/5. Sensitivity Analysis.ipynb
@@ -48,6 +48,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Loading Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here we load pure component data for the compound Triethylene glycol (TEG)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -104,6 +118,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. Sensitivity Analysis\n",
+    "Now that we have selected experimental data to use for the sensitivity analyisis, it is time to perform the actual uncertainty analysis. First we set up a CPA model, which is done below"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -127,24 +149,48 @@
     "Thermo.NoPureComp(1)\n",
     "Thermo.CritProps(1,Tc,Pc,Om)\n",
     "Thermo.CPAParams(1,b0,Gamma,c1)\n",
-    "Thermo.AssocParams(1,AssocSch,AssocVol,AssocEng)\n",
-    "\n",
-    "\n",
-    "UncertaintyAnalysis = xt.CPA_UncertaintyAnalysis()\n",
-    "\n",
-    "\n",
-    "UncertaintyAnalysis.AddThermo(Thermo)\n",
-    "\n",
-    "\n",
-    "UncertaintyAnalysis.AddExp(exp_data)\n",
-    "\n",
-    "\n",
-    "(psat_deviation, rho_deviation, deltas) = UncertaintyAnalysis.Sensitivity_Analysis()\n"
+    "Thermo.AssocParams(1,AssocSch,AssocVol,AssocEng)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now that a model have been set up, we can use the CPA_UncertaintyAnalysis class to perform sensitivity analysis."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#First an Uncertainty Analysis object is created\n",
+    "UncertaintyAnalysis = xt.CPA_UncertaintyAnalysis()\n",
+    "\n",
+    "#Using the subfunction AddThermo, we can add the previously defined model to the object\n",
+    "UncertaintyAnalysis.AddThermo(Thermo)\n",
+    "\n",
+    "#Using the subfunction AddExp, we can add the previously defined experimental data to the object\n",
+    "UncertaintyAnalysis.AddExp(exp_data)\n",
+    "\n",
+    "#We are now ready to run sensitivity analysis.\n",
+    "(psat_deviation, rho_deviation, deltas) = UncertaintyAnalysis.Sensitivity_Analysis()\n",
+    "\n",
+    "#psat_deviationn: Five column matrix, each column represents the deviations between model and psat data \n",
+    "#measured at a change in one variable.\n",
+    "#Col 1: b0 [%]\n",
+    "#Col 2: Gamma [%]\n",
+    "#Col 3: c1 [%]\n",
+    "#Col 4: beta [%]\n",
+    "#Col 5: epsr [%]\n",
+    "\n",
+    "#deltas: One column vector, each row represents a percent deviation from original parameter value."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
