Various changes to the python file and jupyter notebooks, radical changes

--- a/1. Preparing Thermodynamic Calculations.ipynb
+++ b/1. Preparing Thermodynamic Calculations.ipynb
@@ -39,7 +39,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import xThermoInterface as xt #Required"
+    "import pytherm #required"
    ]
   },
   {
@@ -120,11 +120,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Remember - xt is the acronym given the package loaded earlier (see initialization section)\n",
-    "# \"Thermo\" is now a class we may access at any point. Using functions from this class \n",
+    "# Remember - \"pytherm\" refers to the python module\n",
+    "# \"Thermo\" is now an object we may access at any point. Using functions from this class \n",
     "# requires dot-notation, which we will see examples of soon.\n",
     "\n",
-    "Thermo = xt.xThermoInterface()"
+    "Thermo = pytherm.Model()"
    ]
   },
   {
@@ -143,9 +143,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Help on method ChooseAModel in module xThermoInterface:\n",
+      "Help on method ChooseAModel in module pytherm:\n",
       "\n",
-      "ChooseAModel(ieos) method of xThermoInterface.xThermoInterface instance\n",
+      "ChooseAModel(ieos) method of pytherm.Model instance\n",
       "    This function allows the user to pick a model to use\n",
       "    \n",
       "    :param ieos: integer\n",
@@ -168,7 +168,7 @@
     }
    ],
    "source": [
-    "Thermo = xt.xThermoInterface()\n",
+    "Thermo = pytherm.Model()\n",
     "help(Thermo.ChooseAModel)"
    ]
   },
@@ -194,9 +194,9 @@
    "outputs": [],
    "source": [
     "#Load class\n",
-    "Thermo = xt.xThermoInterface()\n",
+    "Thermo = pytherm.Model()\n",
     "\n",
-    "#Below are examples of choosing a model. Notice the dot-notation: \"Termo.FUNCTIONNAME\"\n",
+    "#Below are examples of choosing a model. Notice the dot-notation: \"Thermo.FUNCTIONNAME\"\n",
     "Thermo.ChooseAModel(1) # CPA\n",
     "\n",
     "Thermo.ChooseAModel(2) # SRK\n",
@@ -230,7 +230,7 @@
    "outputs": [],
    "source": [
     "#Load class\n",
-    "Thermo = xt.xThermoInterface()\n",
+    "Thermo = pytherm.Model()\n",
     "\n",
     "#Below are examples of setting the number of compounds\n",
     "Thermo.NoPureComp(1) # 1 component - represents a pure component system.\n",
@@ -264,7 +264,7 @@
    "outputs": [],
    "source": [
     "#Load class\n",
-    "Thermo = xt.xThermoInterface()\n",
+    "Thermo = pytherm.Model()\n",
     "\n",
     "#----------------------------------------------------------------------------\n",
     "#In this example a pure compound system is set up, and critical properties\n",
@@ -311,7 +311,7 @@
    "outputs": [],
    "source": [
     "#Load class\n",
-    "Thermo = xt.xThermoInterface()\n",
+    "Thermo = pytherm.Model()\n",
     "\n",
     "#----------------------------------------------------------------------------\n",
     "#In this example a pure compound system is set up, and CPA parameters\n",
@@ -359,7 +359,7 @@
    "outputs": [],
    "source": [
     "#Load class\n",
-    "Thermo = xt.xThermoInterface()\n",
+    "Thermo = pytherm.Model()\n",
     "\n",
     "#----------------------------------------------------------------------------\n",
     "#In this example a pure compound system is set up, and association parameters\n",
@@ -399,7 +399,7 @@
    "outputs": [],
    "source": [
     "#Load class\n",
-    "Thermo = xt.xThermoInterface()\n",
+    "Thermo = pytherm.Model()\n",
     "\n",
     "Thermo.NoSpecKij(1) #Only a single kij is present in this binary system.\n",
     "\n",
@@ -461,7 +461,7 @@
    "outputs": [],
    "source": [
     "#The class is loaded\n",
-    "Thermo = xt.xThermoInterface()\n",
+    "Thermo = pytherm.Model()\n",
     "\n",
     "#We tell the engine to use CPA for calculations\n",
     "Thermo.ChooseAModel(1) # 1 - CPA\n",
@@ -497,7 +497,7 @@
    "outputs": [],
    "source": [
     "#The class is loaded\n",
-    "Thermo = xt.xThermoInterface()\n",
+    "Thermo = pytherm.Model()\n",
     "\n",
     "#We tell the engine to use CPA for calculations\n",
     "Thermo.ChooseAModel(1) # 1 - CPA\n",
