Added customizations to optimization function. Possibility for bound, choice of least square algorithm, and possibility for multiple random starts.

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -6,31 +6,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pytherm"
+    "import pytherm\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Your computer has a total of 16 cores (or threads). \n",
-      "This module will by default utilize all available cores minus one.\n",
-      "To change this, use the Set_Cores() function\n",
-      "Entered number of cores not within range, defaulting to 15\n",
-      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "Threading = pytherm.MultiThreading()\n",
-    "Threading.Set_Cores(60)\n",
-    "Threading.Pooling()\n",
+    "#Here we initialize the class\n",
+    "exp_data = pytherm.Experimental_Data()\n",
     "\n",
+    "#By using the \"Add\" class function, we may add experimental data to the class. First we add vapor pressure data\n",
+    "filename_psat = 'experimental_data/TEG_vapor_pressure.csv'\n",
+    "datatype_psat = 'PSat'\n",
+    "identifier_psat = 'teg_psat'\n",
+    "exp_data.Add(filename_psat, datatype_psat, identifier_psat)\n",
+    "exp_data.Add(filename_psat, datatype_psat, \"yolo\")\n",
+    "\n",
+    "#Similarly, we add liquid density data.\n",
+    "filename_rho = 'experimental_data/TEG_liq_density.csv'\n",
+    "datatype_rho = 'rho'\n",
+    "identifier_rho = 'teg_rho'\n",
+    "exp_data.Add(filename_rho, datatype_rho, identifier_rho)\n",
     "\n"
    ]
   },
@@ -38,8 +38,27 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before adjusting for reduced temperature\n",
+      "Data Type        Dim (r x c)     Name           \n",
+      "-------------------------------------------------------------\n",
+      "PSat             38x2            teg_psat       \n",
+      "PSat             38x2            yolo           \n",
+      "rho              61x2            teg_rho        \n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#In this code section, we display the experimental data currently available in the class using the Show_list() function\n",
+    "print(\"Before adjusting for reduced temperature\")\n",
+    "exp_data.Show_list()"
+   ]
   },
   {
    "cell_type": "code",
@@ -50,10 +69,71 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 1, 4, 9, 16, 25, 36, 49, 64, 81]\n"
+      "[38, 2]\n",
+      "[76, 2]\n",
+      "[114, 2]\n"
      ]
     }
    ],
+   "source": [
+    "exp_psat = exp_data.Retrieve_data('teg_psat')\n",
+    "test = exp_data.Retrieve_data_type('PSat')\n",
+    "combined = np.append(exp_psat,test,0)\n",
+    "\n",
+    "print([np.size(exp_psat,0), np.size(exp_psat,1)])\n",
+    "print([np.size(test,0), np.size(test,1)])\n",
+    "print([np.size(combined,0), np.size(combined,1)])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.size(np.zeros((1,2)),0))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Threading = pytherm.MultiThreading()\n",
+    "#Threading.Set_Cores(60)\n",
+    "#Threading.Pooling()\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
