Implemented Particle Swarm Optimization and Nelder Mead

--- a/tests/jupyter_notebooks/4. Parameter Optimization.ipynb
+++ b/tests/jupyter_notebooks/4. Parameter Optimization.ipynb
@@ -310,7 +310,7 @@
     "\n",
     "#Now the optimizer have enough information to perform parameterization. Keep in mind that Optimizer is solely for\n",
     "#CPA model, a\n",
-    "opti_params = optimizer.Calculation()"
+    "opti_params = optimizer.Optimization()"
    ]
   },
   {
